<resources>
    <string name="app_name">Converter</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_temperature">Temperature</string>
    <string name="menu_area">Area</string>
    <string name="menu_angle">Angle</string>
    <string name="menu_length">Length</string>
    <string name="menu_number">Number System</string>
    <string name="menu_weight">Weight</string>

    <string name="pt_value">0</string>
    <string name="defaultstring">way sulod</string>

    <string name="tv_to">To</string>
    <string name="tv_from">From</string>

    <string name="action_clear">Clear</string>
    <string name="action_exit">Exit</string>
    <string name="action_about">About</string>


</resources>
