<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextValue1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.807" />

    <TextView
        android:id="@+id/textViewTemp1"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/spinner_border"
        android:freezesText="true"
        android:gravity="center"
        android:text="@string/defaultstring"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextValue1"
        app:layout_constraintEnd_toStartOf="@+id/spinner1"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextValue1"
        android:layout_width="310dp"
        android:layout_height="40dp"
        android:layout_marginBottom="52dp"
        android:ems="10"
        android:gravity="center|center_horizontal|center_vertical"
        android:hint="@string/pt_value"
        android:background="@drawable/answer_border"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/textViewTemp2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewTemp2"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/spinner_border"
        android:freezesText="true"
        android:gravity="center"
        android:text="@string/defaultstring"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewResult"
        app:layout_constraintEnd_toStartOf="@+id/spinner2"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewResult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="310dp"
        android:layout_height="40dp"
        android:layout_marginBottom="220dp"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/pt_value"
        android:background="@drawable/answer_border"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginTop="40dp"
        android:text="@string/tv_from"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewTemp1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.118"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.444" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/tv_to"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewTemp2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>